Update info-resume details

--- a/resume.html
+++ b/resume.html
@@ -62,137 +62,153 @@
             </div>
             <div class="info-resume">
                 <div class="details">
-                    <div class="education">
-                        <div class="title-info">
-                            <h3>EDUCATION 🎓</h3>
+                    <div class="area-left">
+                        <div class="education">
+                            <div class="title-info">
+                                <h3>EDUCATION 🎓</h3>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>UNIFACISA</h4>
+                                <span>2011 - 2014</span>
+                                <p>Graduate in <br>Digital Games</p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>ESTÁCIO</h4>
+                                <span>2017 - 2018</span>
+                                <p>Post graduate in <br>Mobile Development</p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>GOOGLE <br>CERTIFICATE</h4>
+                                <span>2021</span>
+                                <p>Google UX <br>Certification - <br>Coursera</p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>DESIGN CIRCUIT</h4>
+                                <span>2020</span>
+                                <p>Course - UX Design</p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>UI BOOST</h4>
+                                <span>2020</span>
+                                <p>Course - UI Design</p>
+                            </div>
                         </div>
-                        <div class="sub-title-info">
-                            <h4>UNIFACISA</h4>
-                            <span>2011 - 2014</span>
-                            <p>Graduate in <br>Digital Games</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>ESTÁCIO</h4>
-                            <span>2017 - 2018</span>
-                            <p>Post graduate in <br>Mobile Development</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>GOOGLE CERTIFICATE</h4>
-                            <span>2021</span>
-                            <p>Google UX <br>Certification - <br>Coursera</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>DESIGN CIRCUIT</h4>
-                            <span>2020</span>
-                            <p>Course - UX Design</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>UI BOOST</h4>
-                            <span>2020</span>
-                            <p>Course - UI Design</p>
-                        </div>
-                    </div>
-                    <div class="contact-details">
-                        <div class="title-info">
-                            <h3>CONTACT 📱</h3>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>MOBILE</h4>
-                            <a href="tel:+5583981143238" target="_blank" rel="external">
-                                <p>+55 83 98114 3238</p>
-                            </a>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>EMAIL</h4>
-                            <a href="mailto:gersonmks@gmail.com" target="_blank" rel="external">
-                                <p>gersonmks@gmail.com</p>
-                            </a>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>LINKEDIN</h4>
-                            <a href="https://linkedin.com/in/gersonmks" target="_blank" rel="external">
-                                <p>gersonmks</p>
-                            </a>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>INSTAGRAM</h4>
-                            <a href="https://www.instagram.com/gersonmks/" target="_blank" rel="external">
-                                <p>@gersonmks</p>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="work-experience">
-                        <div class="title-info">
-                            <h3>WORK EXPERIENCE 🖥</h3>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>CAPGEMINI | SENIOR PRODUCT DESIGNER</h4>
-                            <span>Remote, BR | Dec - Currently</span>
-                            <p>Developed usability projects, interaction designs, and information architectures.
-                                Prevented usability problems and implemented innovative solutions. Planned and defined
-                                responsive interfaces. Applied user feedback, competitive analysis, and user journey in
-                                an Agile environment and using/applying Google sprint methodology, Scrum, and Lean
-                                Inception.</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>SENAI | UI/UX DESIGNER</h4>
-                            <span>Campina Grande, BR | Jun, 2017 - Nov, 2020</span>
-                            <p>End-to-end in the product, from research and interviews to prototyping and usability
-                                testing improvements. I designed various apps, web systems, games, augmented and virtual
-                                reality apps and interactive presentations. Provided feedback and interacted with those
-                                related areas. Applied user surveys and performed usability testing. Acted as a
-                                facilitator as well.</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>CACTUS STUDIO | VISUAL AND GAME DESIGNER</h4>
-                            <span>Campina Grande, BR | Abr, 2015 - Jun, 2017</span>
-                            <p>Development of mobile games, advergames, serious games and indie games for the
-                                publication and dissemination of my work, as well as for clients as a freelancer.</p>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>FREELANCE | UX / UI / VISUAL DESIGNER</h4>
-                            <span>Campina Grande, BR | Jan, 2013 - Dec, 2016</span>
-                            <p>I worked on several projects such as creating games, applications and websites for
-                                Brazilian companies. For some projects, I was responsible for building the visual
-                                identity, in addition to the interface and user experience.</p>
+                        <div class="contact-details">
+                            <div class="title-info">
+                                <h3>CONTACT 📱</h3>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>MOBILE</h4>
+                                <a href="tel:+5583981143238" target="_blank" rel="external">
+                                    <p>+55 83 98114 3238</p>
+                                </a>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>EMAIL</h4>
+                                <a href="mailto:gersonmks@gmail.com" target="_blank" rel="external">
+                                    <p>gersonmks@gmail.com</p>
+                                </a>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>LINKEDIN</h4>
+                                <a href="https://linkedin.com/in/gersonmks" target="_blank" rel="external">
+                                    <p>gersonmks</p>
+                                </a>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>INSTAGRAM</h4>
+                                <a href="https://www.instagram.com/gersonmks/" target="_blank" rel="external">
+                                    <p>@gersonmks</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="skillset">
-                        <div class="title-info">
-                            <h3>SKILLSET ✨</h3>
+                    <div class="area-right">
+                        <div class="work-experience">
+                            <div class="title-info">
+                                <h3>WORK EXPERIENCE 🖥</h3>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>CAPGEMINI | SENIOR PRODUCT DESIGNER</h4>
+                                <span>Remote, BR | Dec - Currently</span>
+                                <p>Developed usability projects, interaction designs, and information architectures.
+                                    Prevented usability problems and implemented innovative solutions. Planned and
+                                    defined
+                                    responsive interfaces. Applied user feedback, competitive analysis, and user journey
+                                    in
+                                    an Agile environment and using/applying Google sprint methodology, Scrum, and Lean
+                                    Inception.</p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>SENAI | UI/UX DESIGNER</h4>
+                                <span>Campina Grande, BR | Jun, 2017 - Nov, 2020</span>
+                                <p>End-to-end in the product, from research and interviews to prototyping and usability
+                                    testing improvements. I designed various apps, web systems, games, augmented and
+                                    virtual
+                                    reality apps and interactive presentations. Provided feedback and interacted with
+                                    those
+                                    related areas. Applied user surveys and performed usability testing. Acted as a
+                                    facilitator as well.</p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>CACTUS STUDIO | VISUAL AND GAME DESIGNER</h4>
+                                <span>Campina Grande, BR | Abr, 2015 - Jun, 2017</span>
+                                <p>Development of mobile games, advergames, serious games and indie games for the
+                                    publication and dissemination of my work, as well as for clients as a freelancer.
+                                </p>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>FREELANCE | UX / UI / VISUAL DESIGNER</h4>
+                                <span>Campina Grande, BR | Jan, 2013 - Dec, 2016</span>
+                                <p>I worked on several projects such as creating games, applications and websites for
+                                    Brazilian companies. For some projects, I was responsible for building the visual
+                                    identity, in addition to the interface and user experience.</p>
+                            </div>
                         </div>
-                        <div class="sub-title-info">
-                            <h4>TOOLS</h4>
-                            <div class="skillset-details">
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>Figma, Sketch, XD, Marvel and Invision.</p> </div>
-                            <div class="skillset-details">
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>Photoshop, Illustrator, After Effects and Lightroom.</p></div>
-                            <div class="skillset-details">
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>Unity, Xcode and Zbrush.</p></div>
-                        </div>
-                        <div class="sub-title-info">
-                            <h4>SKILLS</h4>
-                            <div class="skillset-details">
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>User Research, Usability Test, Competitor Analysis and Personas.</p> </div>
-                            <div class="skillset-details">
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>Wireframing and Prototyping.</p></div>
-                            <div class="skillset-details">
+                        <div class="skillset">
+                            <div class="title-info">
+                                <h3>SKILLSET ✨</h3>
+                            </div>
+                            <div class="sub-title-info tools">
+                                <h4>TOOLS</h4>
+                                <div class="skillset-details">
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>Figma, Sketch, XD, Marvel and Invision.</p>
+                                </div>
+                                <div class="skillset-details">
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>Photoshop, Illustrator, After Effects and Lightroom.</p>
+                                </div>
+                                <div class="skillset-details">
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>Unity, Xcode and Zbrush.</p>
+                                </div>
+                            </div>
+                            <div class="sub-title-info">
+                                <h4>SKILLS</h4>
+                                <div class="skillset-details">
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>User Research, Usability Test, Competitor Analysis and Personas.</p>
+                                </div>
+                                <div class="skillset-details">
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>Wireframing and Prototyping.</p>
+                                </div>
+                                <div class="skillset-details">
 
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>Design System, UI Patterns, Interactions and User Flows.</p></div>
-                            <div class="skillset-details">
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>Design System, UI Patterns, Interactions and User Flows.</p>
+                                </div>
+                                <div class="skillset-details">
 
-                            <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
-                            <p>Game Design, 3D and Branding.</p></div>
-                        </div>
+                                    <img src="/img/icon-seta.svg" alt="Seta de detalhamento">
+                                    <p>Game Design, 3D and Branding.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
