--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <section class="s-brands">
         <div class="container">
             <div class="brand-neo">
-                <a href="#" class="brand-hover"> <img src="img/hover-neo.svg" alt=""></a>
-                <a href="#" class="brand-img"> <img src="img/brand-neo.svg" alt=""></a>
+                <a href="/neomarket.html" class="brand-hover"> <img src="img/hover-neo.svg" alt=""></a>
+                <a href="/neomarket.html" class="brand-img"> <img src="img/brand-neo.svg" alt=""></a>
             </div>
             <div class="brand-bb">
                 <a href="#" class="brand-hover"> <img src="img/hover-bb.svg" alt=""></a>
