Update pag. projects Neomarket initial

--- a/neomarket.html
+++ b/neomarket.html
@@ -20,7 +20,10 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="banner">
+            <img src="/img/banner-top-neo.svg" class="image-banner" alt="">
+        </div>
+        <div class="header-project">
             <a href="#" class="logo">
                 <img src="./img/logo.svg" alt="Logotipo Gesrson Marques">
             </a>
@@ -33,4 +36,18 @@
                 <a href="" class="btn-mobile"><img src="img/btn-mobile.svg" alt=""></a>
             </nav>
         </div>
+        <div class="text-header">
+            <img src="/img/logo-neo-header.svg" alt="">
+            <span>your way. your time.</span>
+        </div>
+        <div class="img-header">
+
+        <div class="area-left">
+            <img src="/img/icons-gradient-left.svg" class="image1" alt="">
+            <img src="/img/illustration-neo.svg" class="image2" alt="">
+        </div>
+        <div class="area-right">
+            <img src="/img/icons-gradient-right.svg" class="image3" alt="">
+        </div>
+    </div>
     </header>
