Update banner neomarket

--- a/neomarket.html
+++ b/neomarket.html
@@ -19,9 +19,21 @@
 </head>
 
 <body>
-    <header>
-        
-        <div class="banner">
-            <img src="/img/banner-top-neo.svg" class="image-banner" alt="">
-        </div>        
-    </header>
+<div class="topo">
+    <img src="/img/banner-top-neo.png" alt="">
+</div>
+
+<div class="navigation">
+<div class="logotipo">
+    <img src="/img/Vector Smart Object 2.png" alt="">
+</div>
+    <div class="links">
+    <ul>
+        <li><a href="">Item 1</a></li>
+        <li><a href="">Item 2</a></li>
+        <li><a href="">Item 3</a></li>
+
+    </ul>
+</div>
+</div>
+                
