--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="btn-hero">
-                <a href="#" class="style-btn">Read more</a>
+                <a href="/resume.html" class="style-btn">Read more</a>
             </div>
         </div>
     </section>
