add initial ajust at the typewriter animation

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                             <li><span>Game</span></li>
                         </ul>
                     </div>
-                    <div class="textFixed">
+                    <!-- <div class="textFixed">
                         <h3>design.</h3>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="btn-hero">
