--- a/index.html
+++ b/index.html
@@ -1,90 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- style -->
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
 
     <title>Gerson Marques - Product Designer</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    
     <header>
-        <div class="container">
-            <a href="#" class="logo">
-                <img src="./img/logo.svg" alt="Logotipo Gesrson Marques">
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html" rel="next">About</a></li>
-                    <li><a href="resume.html" rel="next">Resume</a></li>
-                </ul>
-                <a href="" class="btn-mobile"><img src="img/btn-mobile.svg" alt=""></a>
-            </nav>
-        </div>
+      <div class="container">
+        <a href="#" class="logo">
+          <img src="./img/logo.svg" alt="Logotipo Gesrson Marques" />
+        </a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Work</a></li>
+            <li><a href="about.html" rel="next">About</a></li>
+            <li><a href="resume.html" rel="next">Resume</a></li>
+          </ul>
+          <a href="" class="btn-mobile"
+            ><img src="img/btn-mobile.svg" alt=""
+          /></a>
+        </nav>
+      </div>
     </header>
 
     <section class="s-hero">
-        <div class="container">
-            <div class="txt-hero">
-                <h3 class="txt-primary">Hello, I'm Gerson Marques</h3>
-                <div class="txt-change">
-                    <div class="txt-secondary">
-                        <h3>I am passionate about</h3>
-                        <ul class="option">
-                            <li><span>Product</span></li>
-                            <li><span>UI/UX</span></li>
-                            <li><span>Visual</span></li>
-                            <li><span>Game</span></li>
-                        </ul>
-                    </div>
-                    <!-- <div class="textFixed">
-                        <h3>design.</h3>
-                    </div> -->
-                </div>
-            </div>
-            <div class="btn-hero">
-                <a href="/resume.html" class="style-btn">Read more</a>
-            </div>
+      <div class="container">
+        <div class="title-hero">
+          <h1>Hello, I'm Gerson Marques</h1>
         </div>
+        <div class="text-change">
+          <h3>I am passionate about <span class="auto-type"></span>design.</h3>
+        </div>
+        <span
+          >Currently working on<a
+            href="https://ciandt.com/br/?gclid=EAIaIQobChMIoazf_9CW-QIVDjyRCh0U0QaSEAAYASAAEgJSA_D_BwE"
+            target="_blank"
+          >
+            @CI&T</a
+          >
+          for <a href="https://www.bees.com/en" target="_blank">@BEES</a>.</span
+        >
+        <div class="btn-hero">
+          <a href="/resume.html" class="style-btn">Read more</a>
+        </div>
+      </div>
     </section>
 
     <section class="s-brands">
-        <div class="container">
-            <div class="brand-neo">
-                <a href="/neomarket.html" class="brand-hover"> <img src="img/hover-neo.svg" alt=""></a>
-                <a href="/neomarket.html" class="brand-img"> <img src="img/brand-neo.svg" alt=""></a>
-            </div>
-            <div class="brand-bb">
-                <a href="#" class="brand-hover"> <img src="img/hover-bb.svg" alt=""></a>
-                <a href="#" class="brand-img"><img src="img/brand-bb.svg" alt=""></a>
-            </div>
-            <div class="brand-pedal">
-                <a href="#" class="brand-hover"> <img src="img/hover-pedal.svg" alt=""></a>
-                <a href="#" class="brand-img"><img src="img/brand-pedal.svg" alt=""></a>
-            </div>
-            <div class="brand-senai">
-                <a href="#" class="brand-hover"> <img src="img/hover-senai.svg" alt=""></a>
-                <a href="#" class="brand-img"><img src="img/brand-senai.svg" alt=""></a>
-            </div>
+      <div class="container">
+        <div class="brand-neo">
+          <a href="/neomarket.html" class="brand-hover">
+            <img src="img/hover-neo.svg" alt=""
+          /></a>
+          <a href="/neomarket.html" class="brand-img">
+            <img src="img/brand-neo.svg" alt=""
+          /></a>
         </div>
+        <div class="brand-bb">
+          <a href="#" class="brand-hover">
+            <img src="img/hover-bb.svg" alt=""
+          /></a>
+          <a href="#" class="brand-img"
+            ><img src="img/brand-bb.svg" alt=""
+          /></a>
+        </div>
+        <div class="brand-pedal">
+          <a href="#" class="brand-hover">
+            <img src="img/hover-pedal.svg" alt=""
+          /></a>
+          <a href="#" class="brand-img"
+            ><img src="img/brand-pedal.svg" alt=""
+          /></a>
+        </div>
+        <div class="brand-senai">
+          <a href="#" class="brand-hover">
+            <img src="img/hover-senai.svg" alt=""
+          /></a>
+          <a href="#" class="brand-img"
+            ><img src="img/brand-senai.svg" alt=""
+          /></a>
+        </div>
+      </div>
     </section>
 
     <footer>
-        <p>Powered by<a href="https://github.com/andremfdev" target="_blank"> @andremfdev</a></p>
+      <p>
+        Powered by<a href="https://github.com/andremfdev" target="_blank">
+          @andremfdev</a
+        >
+      </p>
     </footer>
 
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="./main.js"></script>
+  </body>
 </html>
